Fixes for jpackage.